# AsiCamera

./: .gitignore  ASICamera2Headers.h  CMakeLists.txt  Makefile  README.md  cameraboost.cpp  cameraboost.h  deltatime.h  fix.cpp  main.cpp  queue.h  relationship.cpp  relationship.h  symtab_memory.c  symtab_memory.h  tmp.cpp  wrap.cpp
example/: CMakeLists.txt  main.cpp
example/performance/: CMakeLists.txt  deltatime.h  main.cpp  redirecttofile.h
example/performance/lib/: CMakeLists.txt  asicamera.cpp  asicamera.h  asicameracontrol_p.h  asicamerainfo.h
example/simply/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  asicamera.cpp  asicamera.h  asicamera_p.h  asicameracontrol.cpp  asicameracontrol.h  asicamerainfo.cpp  asicamerainfo_p.h
lib/include/: ASICamera2Boost.h
lib/src/: ASICamera2Headers.h  cameraboost.cpp  cameraboost.h  queue.h  stypes.h  wrap.cpp
lib/src/libusb-cpp/: libusb.h  libusbchunkedbulktransfer.cpp  libusbchunkedbulktransfer.h
libasicamera2/1.16/lib/mac/: libASICamera2.dylib
libasicamera2/1.17/lib/mac/: libASICamera2.dylib
libasicamera2/1.30/lib/mac/: libASICamera2.dylib
libasicamera2/lib/mac/: libASICamera2.dylib
libusb-cpp/: libusb.h  libusbbulktransfer.cpp  libusbbulktransfer.h  libusbchunkedbulktransfer.cpp  libusbchunkedbulktransfer.h
scripts/: debug-test-run.sh  debug-test.sh
